--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.49.0
-pandas
-psycopg2
-streamlit-autorefresh
+streamlit==1.38.0
+psycopg2-binary==2.9.9
+pandas==2.2.2
+matplotlib==3.9.2
